# advent-of-code

./: .gitignore  pyproject.toml  requirements.in  requirements.txt
aoc/: __init__.py  helpers.py
java/aoc/src/year_2024/: Day01.java
notebooks/: 2021_solutions.ipynb  2022_solutions.ipynb
solutions/: 2021_solutions.ipynb  2022_solutions.ipynb
solutions/.ipynb_checkpoints/: 2021_solutions-checkpoint.ipynb
src/aoc/: __init__.py  helpers.py  template.py  utils.py
src/aoc/2015/: 01.py  02.py
src/aoc/2022/: 08.py
src/aoc/2023/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py
src/aoc/2024/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  13.py  14.py  17.py  19.py  22.py  23.py  24.py  25.py
src/aoc/2025/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py
src/aoc/algorithms/: union_find.py
src/aoc/cli/: __init__.py  data.py  run.py
